<package>
 <name>rosie_servo_controller</name>
  <version>0.1.0</version>
  <description>
    Servo controller for Rosie.
  </description>
  <license>BSD</license>

  <maintainer email="anshg@kth.se">Ansh G.</maintainer>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>phidgets</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>phidgets</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
</package>
